# dbt-layer

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  dev-requirements.txt  environment.mk  include.mk  mypy.ini  pyproject.toml  renovate.json5  setup.py
.github/ISSUE_TEMPLATE/: community-request.md
.github/workflows/: check.yml  e2e-tests.yml  release.yml
common/: adapter.py  automl.py  credentials.py  pandas_helper.py  sql_parser.py
common/automl_models/: base_model.py  sklearn_models.py  xgboost_models.py
dbt-big-query/: DESCRIPTION.md  pyproject.toml
dbt-big-query/dbt/adapters/layer_bigquery/: connections.py  impl.py
dbt-big-query/dbt/include/layer_bigquery/macros/original/materializations/: copy.sql  seed.sql  snapshot.sql  table.sql  view.sql
dbt-big-query/test/: layer_bigquery.dbtspec
dbt-big-query/test/e2e/: conftest.py  test_example_projects.py
dbt-big-query/test/unit/: test_dependencies.py  test_noop.py  test_sql_parser.py
dbt/adapters/dbt-layer-bigquery/: __init__.py  connections.py  impl.py
dbt/adapters/layer_bigquery/: __init__.py  __version__.py  connections.py  impl.py
dbt/adapters/layer_snowflake/: __init__.py  __version__.py  connections.py  impl.py
dbt/include/dbt-layer-bigquery/: dbt_project.yml  sample_profiles.yml
dbt/include/dbt-layer-bigquery/macros/: catalog.sql
dbt/include/layer_bigquery/: __init__.py  dbt_project.yml  profile_template.yml  sample_profiles.yml
dbt/include/layer_bigquery/macros/: catalog.sql
dbt/include/layer_bigquery/macros/original/: adapters.sql  catalog.sql
dbt/include/layer_bigquery/macros/original/materializations/: incremental.sql
dbt/include/layer_snowflake/: dbt_project.yml
examples/: README.md
examples/cloth_detector/: README.md  dbt_project.yml
examples/cloth_detector/models/products/: cloth_detections.sql  schema.yml
examples/cloth_detector/seeds/: products.csv
examples/order_review_prediction/: README.md  dbt_project.yml
examples/order_review_prediction/models/: items.sql  orders.sql  predictions.sql  schema.yml  training_data.sql
examples/order_review_prediction/models/ml_model/: review_score_predictor.sql  schema.yml  training_data.sql
examples/order_review_prediction/models/staging/: schema.yml  stg_items.sql  stg_orders.sql  stg_reviews.sql
examples/order_review_prediction/seeds/: raw_reviews.csv
examples/sentiment_analysis/: README.md  dbt_project.yml
examples/sentiment_analysis/models/reviews/: review_sentiments.sql  schema.yml
examples/sentiment_analysis/seeds/: reviews.csv
examples/titanic/: README.md  dbt_project.yml
examples/titanic/models/passenger_features/: passenger_features.sql  schema.yml
examples/titanic/models/predictions/: predictions.sql  schema.yml
examples/titanic/seeds/: passengers.yml
layer/dbt/: adapter.py  sql_parser.py
layer_dbt/dbt/: adapter.py  pandas_helper.py  sql_parser.py
test/: conftest.py  dbt-layer-bigquery.dbtspec  layer_bigquery.dbtspec
test/e2e/: conftest.py  dbt_examples_project_commit_sha.txt  dbt_profiles_template.yaml  profiles_template_bigquery.yaml  test_example_projects.py
test/unit/: test_dependencies.py  test_noop.py  test_sql_parser.py
