[tool.poetry]
name = "dbt-layer-bigquery"
version = "0.1.0"
description = "The Layer / BigQuery adapter plugin for dbt"
authors = ["Layer <info@layer.ai>"]
readme = "DESCRIPTION.md"
packages = [
    { include = "dbt" },
    { include = "common" },
]

[tool.poetry.dependencies]
python = ">=3.7.2,<3.11"
dbt-core = "1.2.0"
dbt-bigquery = "1.2.0"
pandas = "1.3.5"
sqlparse = "~=0.4.2"
layer = "0.10.2748018609"
scikit-learn = "1.0.2"
xgboost = "1.5.1"
matplotlib = "3.5.1"

[tool.poetry.dev-dependencies]
black = "22.3.0"
flake8 = "*"
ipdb = "*"
mypy = "0.942"
pytest = "*"
pytest-dotenv = "*"
isort = "^5.10.1"
bandit = "^1.7.4"
toml = "^0.10.2"
types-toml = "^0.10.7"
pytest-cov = "^3.0.0"
flake8-no-implicit-concat = "^0.3.3"
pylint = "^2.13.9"
pytest-asyncio = "^0.18.3"
torch = "^1.11.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.coverage.run]
omit = [
    "test/*",
]

[tool.pylint.MASTER]
ignore-patterns=[ ".*pb2.py" , ".*pb2_grpc.p", ".*egg-info.*", ".*ini", ".*.gradle", "MANIFEST.in", ".*.md"]
max-line-length=120
load-plugins="pylint_django"
known-third-party="layer_client"
fail-on="I"
disable="all"
good-names-rgxs="^[_a-z][_a-z0-9]?$" # allow 1 or 2 character variables
# Taken from https://github.com/edx/edx-lint/blob/master/pylintrc with some modifications
enable = [
    "invalid-overridden-method",
    "arguments-out-of-order",
    "redeclared-assigned-name",
    "self-assigning-variable",
    "property-with-parameters",
    "class-variable-slots-conflict",
    "dict-iter-missing-items",
#   "no-else-raise",
    "comparison-with-callable",
    "unhashable-dict-key",
#   "raise-missing-from",
    "super-with-arguments",
    "useless-super-delegation",
    "useless-object-inheritance",
    "syntax-error",
    "init-is-generator",
    "return-in-init",
    "function-redefined",
    "not-in-loop",
    "return-outside-function",
    "yield-outside-function",
    "return-arg-in-generator",
    "nonexistent-operator",
    "duplicate-argument-name",
    "abstract-class-instantiated",
    "bad-reversed-sequence",
    "continue-in-finally",
    "method-hidden",
    "access-member-before-definition",
    "no-method-argument",
#   "no-self-argument",
    "invalid-slots-object",
    "assigning-non-slot",
    "invalid-slots",
    "inherit-non-class",
    "inconsistent-mro",
    "duplicate-bases",
    "non-iterator-returned",
    "unexpected-special-method-signature",
    "invalid-length-returned",
    "import-error",
    "used-before-assignment",
    "undefined-variable",
    "undefined-all-variable",
    "invalid-all-object",
#   "no-name-in-module",
    "unbalance-tuple-unpacking",
    "unpacking-non-sequence",
    "bad-except-order",
    "raising-bad-type",
    "misplaced-bare-raise",
    "raising-non-exception",
    "nonimplemented-raised",
    "catching-non-exception",
    "slots-on-old-class",
    "super-on-old-class",
    "bad-super-call",
    "missing-super-argument",
#   "no-member",
    "not-callable",
    "assignment-from-no-return",
    "no-value-for-parameter",
#   "too-many-function-args",
    "unexpected-keyword-arg",
    "redundant-keyword-arg",
    "invalid-sequence-index",
    "invalid-slice-index",
    "assignment-from-none",
    "not-context-manager",
    "invalid-unary-operand-type",
    "unsupported-binary-operation",
    "repeated-keyword",
    "not-an-iterable",
    "not-a-mapping",
    "unsupported-membership-test",
    "unsubscriptable-object",
    "logging-unsupported-format",
    "logging-too-many-args",
    "logging-too-few-args",
    "bad-format-character",
    "truncated-format-string",
    "mixed-fomat-string",
    "format-needs-mapping",
    "missing-format-string-key",
    "too-many-format-args",
    "too-few-format-args",
    "bad-str-strip-call",
    "model-unicode-not-callable",
    "super-method-not-called",
    "non-parent-method-called",
    "test-inherits-tests",
    "translation-of-non-string",
    "redefined-variable-type",
    "cyclical-import",
    "unreachable",
    "dangerous-default-value",
    "pointless-statement",
    "pointless-string-statement",
    "expression-not-assigned",
    "duplicate-key",
    "confusing-with-statement",
    "using-constant-test",
    "lost-exception",
    "assert-on-tuple",
    "attribute-defined-outside-init",
    "bad-staticmethod-argument",
    "arguments-differ",
    "signature-differs",
    "abstract-method",
    "super-init-not-called",
    "relative-import",
    "import-self",
    "misplaced-future",
    "invalid-encoded-data",
    "global-variable-undefined",
#   "redefined-outer-name",
#   "redefined-builtin",
    "redefined-in-handler",
    "undefined-loop-variable",
    "cell-var-from-loop",
    "duplicate-except",
    "nonstandard-exception",
    "binary-op-exception",
    "property-on-old-class",
    "bad-format-string-key",
    "unused-format-string-key",
    "bad-format-string",
    "missing-format-argument-key",
    "unused-format-string-argument",
    "format-combined-specification",
    "missing-format-attribute",
    "invalid-format-index",
    "anomalous-backslash-in-string",
    "anomalous-unicode-escape-in-string",
    "bad-open-mode",
    "boolean-datetime",
    "fatal",
    "astroid-error",
    "parse-error",
    "method-check-failed",
    "django-not-available",
    "raw-checker-failed",
    "django-not-available-placeholder",
#   "empty-docstring",
#   "invalid-characters-in-docstring",
#   "missing-docstring",
#   "wrong-spelling-in-comment",
#   "wrong-spelling-in-docstring",
    "unused-import",
    "unused-variable",
#   "unused-argument",
    "exec-used",
    "eval-used",
    "bad-classmethod-argument",
    "bad-mcs-classmethod-argument",
    "bad-mcs-method-argument",
    "bad-whitespace",
    "consider-iterating-dictionary",
    "consider-using-enumerate",
    "literal-used-as-attribute",
    "multiple-imports",
    "multiple-statements",
    "old-style-class",
    "simplifiable-range",
    "singleton-comparison",
    "superfluous-parens",
    "unidiomatic-typecheck",
    "unneeded-not",
    "wrong-assert-type",
    "simplifiable-if-statement",
    "no-classmethod-decorator",
    "no-staticmethod-decorator",
    "unnecessary-pass",
    "unnecessary-lambda",
    "useless-else-on-loop",
    "unnecessary-semicolon",
    "reimported",
    "global-variable-not-assigned",
    "global-at-module-level",
    "bare-except",
#   "broad-except",
    "logging-not-lazy",
    "redundant-unittest-assert",
    "model-missing-unicode",
    "model-has-unicode",
    "model-no-explicit-unicode",
    "protected-access",
    "deprecated-module",
    "deprecated-method",
#   "too-many-nested-blocks",
    "too-many-statements",
#   "too-many-boolean-expressions",
#   "wrong-import-order", # covered by isort
    "wrong-import-position",
#   "wildcard-import",
    "missing-final-newline",
    "mixed-line-endings",
    "trailing-newlines",
    "trailing-whitespace",
    "unexpected-line-ending-format",
    "mixed-indentation",
    "bad-option-value",
    "unrecognized-inline-option",
    "useless-suppression",
    "bad-inline-option",
    "deprecated-pragma",
    "invalid-name"
]

[tool.isort]
profile = "black"
lines_after_imports = 2
known_first_party = ["layer", "test"]
